Fix grid alignment

--- a/css/less/core/components/utilities/align-self.less
+++ b/css/less/core/components/utilities/align-self.less
@@ -1,21 +1,21 @@
 // Align Self
 // ----------------------------------------------------------------------------/
-.align-start {
+.column-start {
     align-self: flex-start;
 }
 
-.align-end {
+.column-end {
     align-self: flex-end;
 }
 
-.align-center {
+.column-center {
     align-self: center;
 }
 
-.align-baseline {
+.column-baseline {
     align-self: baseline;
 }
 
-.align-stretch {
+.column-stretch {
     align-self: stretch;
 }
