--- a/css/less/core/components/utilities/justify-self.less
+++ b/css/less/core/components/utilities/justify-self.less
@@ -1,17 +1,17 @@
 // Justify Self
 // ----------------------------------------------------------------------------/
-.self-start {
+.row-start {
     justify-self: start;
 }
 
-.self-end {
+.row-end {
     justify-self: end;
 }
 
-.self-center {
+.row-center {
     justify-self: center;
 }
 
-.self-stretch {
+.row-stretch {
     justify-self: stretch;
 }
